# markq

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  daily-repo-status.lock.yml  release.yml  update-docs.lock.yml  update-docs.md
markq-chunker/: Cargo.toml
markq-chunker/src/: blocks.rs  frontmatter.rs  lib.rs  tokenize.rs
markq-chunker/tests/: edge_cases.rs
markq-cli/: Cargo.toml
markq-cli/src/: candidate.rs  embed_query.rs  embedder_cmd.rs  indexer.rs  lib.rs  main.rs  query.rs  rerank.rs  search.rs  vsearch.rs
markq-cli/tests/: embed_vsearch_e2e.rs  hybrid_query.rs  index_search_e2e.rs  json_contract.rs  query_rerank.rs  rerank.rs  rerank_edges.rs
markq-cli/tests/fixtures/corpus/: bm25.md  chunker.md  doctor.md  embed.md  hyde.md  lance.md  mcp.md  rerank.md  rrf.md  vector.md
markq-core/: Cargo.toml
markq-core/src/: contract.rs  error.rs  index.rs  lib.rs  metadata.rs  registry.rs  rrf.rs  schema.rs
markq-index-lance/: Cargo.toml
markq-index-lance/src/: lib.rs
markq-index-lance/tests/: contract.rs  schema_roundtrip.rs
markq-inference/: Cargo.toml
markq-inference/src/: backend.rs  embedder.rs  lib.rs  model_cache.rs  reranker.rs
usage/: demo.md  duckdb.md  markq.md  pylance.md
