[workspace]
resolver = "2"
members = [
    "markq-core",
    "markq-cli",
    "markq-chunker",
    "markq-index-lance",
    "markq-inference",
]

# Release artifacts are distributed as prebuilt binaries, so optimize for a
# small, self-contained executable. The llama.cpp CMake build dominates compile
# time regardless, so codegen-units = 1 + thin LTO cost little extra wall time.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# Pinned versions carried forward from the spike workspace
# (`spikes/Cargo.toml`). LanceDB and arrow are exact pins because lancedb is
# sub-1.0 and minor bumps have broken APIs in the past.
[workspace.dependencies]
lancedb = "=0.27.2"
# `lance-index` re-exports `FullTextSearchQuery`, which lancedb 0.27.2 takes
# by-value on `query().full_text_search(..)`. Pinned to the version lancedb
# 0.27.2 itself depends on; bumping in lockstep is the only safe path.
lance-index = "=4.0.0"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"

# File walking for `markq index`.
walkdir = "2"
# Content hashing for incremental reindex.
blake3 = "1"
# `--json` output and MCP responses.
serde_json = "1"

# Markdown parsing for the chunker. Pinned to 0.13 because
# the offset-iterator API and `Tag::HtmlBlock`/`Tag::FootnoteDefinition`
# shapes are load-bearing for our top-level-block walker.
pulldown-cmark = { version = "0.13", default-features = false }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
futures = "0.3"
async-trait = "0.1"

# Inference / model cache. `llama-cpp-2` builds llama.cpp via CMake on the
# first compile (~5 min on a workstation); `.cargo/config.toml` feeds the
# Fedora clang resource directory through bindgen.
llama-cpp-2 = "0.1.146"
hf-hub = "1.0.0-rc.0"
crossbeam-channel = "0.5"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI / config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# Misc
dirs = "6"
tempfile = "3"

# Internal crates
markq-core = { path = "markq-core" }
markq-chunker = { path = "markq-chunker" }
markq-index-lance = { path = "markq-index-lance" }
markq-inference = { path = "markq-inference" }
