[package]
name = "markq-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "markq"
path = "src/main.rs"

[dependencies]
markq-core.workspace = true
markq-chunker.workspace = true
markq-index-lance.workspace = true
markq-inference.workspace = true

anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
blake3.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[features]
# Forward GPU-offload features down to markq-inference so a user can opt in
# with `cargo build --features vulkan` (or `cuda`) from the workspace root.
default = []
vulkan = ["markq-inference/vulkan"]
cuda = ["markq-inference/cuda"]

[dev-dependencies]
tempfile.workspace = true
