[package]
name = "markq-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
# Expose the parameterized `Index` contract test so backend crates can run
# the same suite. Phase 1: `markq-index-lance` uses this. The trait surface
# is kept backend-agnostic so a second backend can be re-added later if
# LanceDB churn forces it, without trait-shape changes.
test-harness = []
