[package]
name = "markq-inference"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# Phase 4 (embedder) and Phase 6 (reranker) wire `llama-cpp-2` here. Phase 1
# stub keeps llama.cpp's vendored CMake build off the critical path.
[dependencies]
markq-core.workspace = true
