[package]
name = "markq-inference"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# `llama-cpp-2` builds llama.cpp via CMake on first compile (~5 min on a
# workstation). `.cargo/config.toml` feeds the Fedora clang resource directory
# through bindgen so `llama-cpp-sys-2` can locate `stdbool.h` et al.
#
# `vulkan` / `cuda` features below forward to the underlying crate; CPU-only
# is the default and the documented support matrix.
[dependencies]
markq-core.workspace = true
llama-cpp-2.workspace = true
hf-hub.workspace = true
crossbeam-channel.workspace = true
sha2.workspace = true
hex.workspace = true
once_cell.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true

[features]
default = []
vulkan = ["llama-cpp-2/vulkan"]
cuda = ["llama-cpp-2/cuda"]

[dev-dependencies]
tempfile.workspace = true
